Fix trial banner font size on mobile screens

--- a/app/assets/stylesheets/pages/ee_start_trial.scss
+++ b/app/assets/stylesheets/pages/ee_start_trial.scss
@@ -102,4 +102,10 @@
       text-decoration: underline;
     }
   }
+
+  @media (max-width: $screen-xs-max) {
+    p {
+      font-size: 90%;
+    }
+  }
 }
